kubernasty/manifests-old-v1/atmosphere/gitea/ingresses/gitea-ssh.in.yaml
# Note that this is a Traefik **IngressRouteTCP**,
# not a native Kubernetes **Ingress**.
#
# Ingress objects can only describe HTTP and HTTPS endpoints -- that's it.
# Exposing non-HTTP(S) TCP and UDP services requires custom resource types like this.

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh-in
  namespace: gitea
spec:
  entryPoints:
    - gitea-ssh
  routes:
   -  match: HostSNI(`*`)
      services:
        - name: gitea-ssh
          port: 22
